--- a/src/app/portal/dashboard/container/dashboard.component.html
+++ b/src/app/portal/dashboard/container/dashboard.component.html
@@ -10,7 +10,7 @@
         <!-- FETCH STOCK COMPONENT STARTS HERE -->
         <app-fetch-stock [allStocks$]="allStocks$"></app-fetch-stock>
         <!-- FETCH STOCK COMPOENT ENDS HERE-->
-        <div *ngIf="mnthlyStocks$ | async as data ">
+        <div >
             <div class="row" >
                 <div class="col-lg-8 col-md-14">
                     <div class="card">
@@ -39,7 +39,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" *ngIf="mnthlyStocks$ | async as data ">
                 <div class="col-lg-8 col-md-14">
                     <div class="card">
                         <div class="card-header card-header-danger">
