--- a/src/app/portal/dashboard/container/dashboard.component.html
+++ b/src/app/portal/dashboard/container/dashboard.component.html
@@ -3,7 +3,7 @@
 
         <!-- TOP VIEW COMPONENT STARTS HERE -->
         <app-topview [prinForm]="prinForm" [disForm]="disForm" [startDate]="startDate" [endDate]="endDate" [allDist] ='distributor'
-            (triggerFilter)="getStockDetails($event)">
+            (triggerFilter)="getStockDetails()">
         </app-topview>
         <!-- TOP VIEW COMPONENT ENDS HERE-->
 
