--- a/src/app/portal/facilitystats/container/facilitystats.component.html
+++ b/src/app/portal/facilitystats/container/facilitystats.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <!-- TOP VIEW COMPONENT STARTS HERE -->
         <app-topview [prinForm]="prinForm" [disForm]="disForm" [startDate]="startDate" [endDate]="endDate"
-            (triggerFilter)="getStockDetails($event)">
+            (triggerFilter)="getStockDetails()">
         </app-topview>
         <!-- TOP VIEW COMPONENT ENDS HERE-->
 
